Renamed the project.

--- a/DelegatesAndEvents/Properties/launchSettings.json
+++ b/DelegatesAndEvents/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "C#Basics": {
+    "CSharpBasics": {
       "commandName": "Project"
     },
     "Container (Dockerfile)": {
